--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,16 @@
+*{
+
+    margin: 0;
+    padding: 0;
+
+}
+
 #content{
 
     display: flex;
     flex-direction: column;
+    height: auto;
+    width: auto;
 
 }
 
@@ -10,6 +19,10 @@
     font-size: 30px;
     text-align: center;
     padding-bottom: 20px;
+    color: #d3ffe9;
+    background-color: #303633;
+    padding-top: 3%;
+    padding-bottom: 2%;
 
 }
 
@@ -19,7 +32,8 @@
     height: 30px;
     width: 30px;
     align-self: center;
-
+    font-weight: bold;
+    
 }
 
 .projects{
@@ -27,6 +41,30 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
+    /*margin-left: 2%;
+    margin-right: 2%;*/
+
+}
+
+.project{
+
+    display: flex;
+    flex-direction: column;
+    background-color: #A6E3E7;
+    padding-bottom: 2%;
+
+}
+
+.project-title{
+
+    height: auto;
+    width: auto;
+    background-color: #303633;
+    color: #d3ffe9;
+    text-align: center;
+    font-size: 18px;
+    padding: 2%;
+    border-radius: 5%;
 
 }
 
@@ -34,18 +72,82 @@
 
     display:  flex;
     flex-direction: column;
+    align-self: center;
     row-gap: 5px;
     width: 50%;
-    padding-bottom: 5%;
+    padding: 5%;
+    background-color: #303633;
+    color: #d3ffe9;
+    border-radius: 5%;
 
 }
 
 .edit-button{
 
     border-radius: 100%;
-    height: 3px;
-    width: 3px;
+    height: 10px;
+    width: 10px;
+    background-color: green;
+    border-color: green;
 
+}
+
+#edit-submit{
+
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+
+}
+
+.add-item, .remove-item{
+
+    align-self: center;
+    font-weight: bold;
+    border-radius: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+
+}
+
+.items-list{
+
+    row-gap: 10px;
+    align-items: center;
+
+}
+
+.item-card{
+
+    height: auto;
+    width: auto;
+    background-color: #303633;
+    border-color:#d3ffe9;
+    color: #d3ffe9;
+    padding: 5%;
+    margin: 2%;
+    overflow: auto;
+    border-radius: 5%;
+    
+
+}
+
+.title-itemcard{
+
+    text-align: center;
+    font-size: x-large;
+    padding-bottom: 5%;
+    text-decoration: underline;
+
+}
+
+.desc-itemcard, .due-itemcard, .order-itemcard{
+
+    text-align: center;
+    
 }
 
 
@@ -54,6 +156,8 @@ input[type=checkbox]:checked ~ div{
     text-decoration: line-through;
 
 }
+
+
 
 
 
